; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_cellrendererbutton.c_cellRendererButtonPangoLayout.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_cellrendererbutton.c_cellRendererButtonPangoLayout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@PANGO_ELLIPSIZE_NONE = common dso_local global i32 0, align 4
@PANGO_WRAP_CHAR = common dso_local global i32 0, align 4
@PANGO_ALIGN_CENTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_3__*, i32*)* @cellRendererButtonPangoLayout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @cellRendererButtonPangoLayout(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32* @gtk_widget_create_pango_layout(i32* %6, i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* @PANGO_ELLIPSIZE_NONE, align 4
  %13 = call i32 @pango_layout_set_ellipsize(i32* %11, i32 %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @pango_layout_set_width(i32* %14, i32 -1)
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* @PANGO_WRAP_CHAR, align 4
  %18 = call i32 @pango_layout_set_wrap(i32* %16, i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* @PANGO_ALIGN_CENTER, align 4
  %21 = call i32 @pango_layout_set_alignment(i32* %19, i32 %20)
  %22 = load i32*, i32** %5, align 8
  ret i32* %22
}

declare dso_local i32* @gtk_widget_create_pango_layout(i32*, i32) #1

declare dso_local i32 @pango_layout_set_ellipsize(i32*, i32) #1

declare dso_local i32 @pango_layout_set_width(i32*, i32) #1

declare dso_local i32 @pango_layout_set_wrap(i32*, i32) #1

declare dso_local i32 @pango_layout_set_alignment(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
